# python-introduction

./: .gitignore  README.md  generate-progress-report.py  pyproject.toml
.github/workflows/: jekyll-gh-pages.yml  test.yml
exercises/1-hello/: hello.py
exercises/1-warm-ups/1-hello/: hello.py  test_hello.py
exercises/2-addition/: addition.py
exercises/2-katas/1-fizzbuzz/: test_fizzbuzz.py
exercises/2-katas/1-fizzbuzz/src/: __init__.py
exercises/2-katas/2-romanconverter/: README.md  test_romanNumeral.py
exercises/2-katas/2-romanconverter/src/: __init__.py
exercises/3-reverse/: reverse.py  test_reverse.py
exercises/4-fizzbuzz/: README.md  test_fizzbuzz.py
exercises/4-fizzbuzz/src/: fizzbuzz.py
exercises/5-romanconverter/: test_romanNumeral.py
exercises/5-romanconverter/src/: romanNumeral.py
exercises/6-bowling/: README.md  test_bowling.py
exercises/6-bowling/src/: __init__.py  bowling.py
exercises/7-marsrover/: README.md
exercises/7-marsrover/src/: __init__.py
exercises/chapter 1/1-hello/: test_hello.py
exercises/chapter 1/2-addition/: addition.py
exercises/chapter 1/3-reverse/: reverse.py
exercises/chapter-2/1/: test_h.py
exercises/chapter1/1-hello/: hello.py
exercises/chapter1/2-addition/: addition.py
github/workflows/: test.yml
presentation/: package-lock.json  package.json  slides.md
presentation/pages/: introduction-formation.md  pourquoi-python.md  python-couteau-suisse.md
report/: report.md
