[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-intro-exercises"
version = "0.1.0"
description = "Exercices d'introduction à Python"
authors = [{name = "Swan Benoit"}]
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
dependencies = [
    "pytest",
    "pytest-cov",
    "pytest-json-report",
    "matplotlib",
    "mypy"
]

[tool.pytest.ini_options]
addopts = "--cov=exercises --cov-report=html --cov-report=term-missing --cov-report=xml --json-report --json-report-file=report.json"
testpaths = ["exercises"]
python_files = "test_*.py"